--- a/大众进口汽车/css/index.css
+++ b/大众进口汽车/css/index.css
@@ -6,7 +6,27 @@ a{text-decoration: none;}
 
 
 #wapper{width: 962px;height: 1385px;padding: 0 15px;margin: 0 auto;}
-#header{width: 960px;height: 114px;margin: 0 1px -3px 1px;}
+#header{width: 960px;height: 114px;margin: 0 1px -3px 1px;position: relative;}
+#logo{display: block;width: 87px;height: 78px;background-image: url("images/2.jpg");background-repeat: no-repeat;position: absolute;left: 0px;top: 22px;}
+#ul1{width: 396px;height: 16px;position: absolute;left: 128px;top: 72px;}
+#ul2{width: 378px;height: 22px;position: absolute;left: 585px;top: 69px;}
+.ul2li{width: 126px;height: 22px;float: left;}
+.ul2a{display: block;width: 122px;height: 22px;background-image: url("images/6.png");background-repeat: no-repeat;}
+#ul2a1{background-position: 0 0;}
+#ul2a1:hover{background-position: 0 -32px;}
+
+#ul2a2{background-position: 0 -74px;}
+#ul2a2:hover{background-position: 0 -106px;}
+
+#ul2a3{background-position: 0 -148px;}
+#ul2a3:hover{background-position: 0 -180px;}
+
+#ul3{width: 577px;height: 18px;position: absolute;left:386px;top: 20px;}
+
+
+
+
+
 #content{width: 960px;height: 485px;border: 1px solid #cfd7d9;border-top: 0px;background-image: url("images/1.jpg");position: relative;z-index: 10;overflow: hidden;}
 #selector{width: 924px;height: 482px;margin:0 18px;position:absolute;left:0px;top:-446px;z-index: 20;}
 #selectorcontent{width: 904px;height: 436px;padding:10px 10px 0 10px; background-color: #fff;}
@@ -105,4 +125,8 @@ a{text-decoration: none;}
 .contenta img{width: 100%;height: 100%;}
 
 
-#footer{width: 962px;height: 748px;margin-top: 12px;}
+#footer{width: 962px;height: 748px;margin-top: 12px;background-color: transparent;text-align: left;}
+#footermain{width: 972px;height: 723px;margin: 40px 0 -20px 0;padding: 15px 0 30px 20px;position: relative;left: -15px;top: 0px;background-color: #eaeeed;}
+#none{width: 972px;height: 45px;}
+#sectionlinks{width: 972px;height: 615px;}
+#footerul{width: 962px;height: 0px;margin-top: 48px;}
