--- a/test/css/index.css
+++ b/test/css/index.css
@@ -6,7 +6,7 @@ a{text-decoration: none;}
 
 
 
-#topNav{top:0; width: 100%;min-width: 1000px;height: 27px;background-color: #f5f5f5;box-shadow: 0 2px 2px rgba(0,0,0,0.4);position: fixed;}
+#topNav{top:0; width: 100%;min-width: 1000px;height: 27px;background-color: #f5f5f5;box-shadow: 0 2px 2px rgba(0,0,0,0.4);}
 #topNavc{width: 1000px;height: 27px;margin: auto;}
 .tbmenu{width: 100px;height: auto;position: relative;}
 .tbmenudt{width: 82px;height: 23px;border:1px solid #f5f5f5;border-bottom: 0; position: absolute;left: 18px;top: 2px; z-index: 10;}
